# icky

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: dump_submission.yml
.github/workflows/: deploy-dumps.yml  process-dump-issue.yml
docs/: DUMP_FORMAT.md
examples/: host_main.cpp  loader.cpp
include/icky/: export.h  icky.h  types.h
include/ue_sdk/: api.h  export.h  types.h  ue_sdk.h
src/: api.cpp  dllmain.cpp
src/console/: menu.cpp  menu.h
src/core/: fsutil.cpp  fsutil.h  logger.cpp  logger.h  memory.cpp  memory.h  modules.cpp  modules.h  pattern.cpp  pattern.h  pattern_scan.cpp  pattern_scan.h  pe.cpp  pe.h  process.cpp  process.h
src/dumper/: sdk_dumper.cpp  sdk_dumper.h
src/engine/: engine_iface.h  fname.cpp  fname.h  gobjects.cpp  gobjects.h  registry.cpp  uobject.cpp  uobject.h  version_db.cpp  version_db.h
src/engines/il2cpp/: decrypt_recover.cpp  decrypt_recover.h  deobf.cpp  deobf.h  il2cpp_engine.cpp  memory_meta.cpp  memory_meta.h  metadata.cpp  metadata.h  runtime_dump.cpp  runtime_dump.h  string_decrypt.cpp  string_decrypt.h
src/engines/mono/: mono_engine.cpp  string_decrypt.cpp  string_decrypt.h
src/engines/source/: source_engine.cpp
src/engines/unreal/: ue_dump.cpp  ue_find.cpp  ue_fname_call.cpp  ue_fname_call.h  ue_internals.h  ue_names.cpp  unreal_engine.cpp
src/generate/: dump_format.cpp  dump_format.h  sdk_writer.cpp  sdk_writer.h
src/generator/: cpp_generator.cpp  cpp_generator.h  json_export.cpp  json_export.h
src/model/: sdk_model.h
tools/decrypt_scan/: main.cpp  recovered_decrypt.hpp
web/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/.github/workflows/: deploy.yml
web/public/dumps/: catalog.json
web/public/dumps/avf2-win64-shipping/: dump.json
web/src/: App.tsx  index.css
web/src/components/: Footer.tsx  Nav.tsx
web/src/components/ui/: Button.tsx
web/src/lib/: dump.ts  motion.ts  sdk_gen.ts  site.ts  types.ts  zip.ts
web/src/pages/: Docs.tsx  DumpDetail.tsx  Dumps.tsx  Home.tsx  Upload.tsx
